finished next auth and user session setup

--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
 GOOGLE_ID=690254047400-7go3d92vvt68a5t2062es6ie2culja0u.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-MONGODB_URI=''
+MONGODB_URI=mongodb+srv://user:xLs8Wyx3QUyd8cy6@cluster0.qb6i5.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL_INTERVAL=http://localhost:3000
+NEXTAUTH_SECRET=j2SEVOHSuhR3dtKFbzpst3GKXbWyzBmTCnLKhy+h4Q4=
+
+NODE_TLS_REJECT_UNAUTHORIZED=0
+
